<resources>
    <string name="app_name">VNAGrapher</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu_home">Home</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_realtime_graph">Real-time Graph</string>

    <string name="nav_header_title">VNA Grapher App</string>

    <string name="menu_alert_threshold">Alert Threshold</string>
    <string name="menu_led_alert">LED Alert</string>

    <string name="title_activity_bluetooth_setup">BluetoothSetupActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>