<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_menu_graph"
            android:title="@string/menu_graph" />
        <item
            android:id="@+id/nav_realtime_graph"
            android:icon="@drawable/ic_menu_realtime"
            android:title="@string/menu_realtime_graph" />

        <item
            android:id="@+id/nav_alert_threshold"
            android:icon="@drawable/ic_menu_alert_threshold"
            android:title="@string/menu_alert_threshold" />

        <item
            android:id="@+id/nav_led_alert"
            android:icon="@drawable/ic_menu_led_warn"
            android:title="@string/menu_led_alert" />
    </group>
</menu>