<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vnagrapher.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.vnagrapher.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />
    <fragment
        android:id="@+id/nav_realtime_graph"
        android:name="com.example.vnagrapher.ui.realtime_graph.RealtimeGraphFragment"
        android:label="@string/menu_realtime_graph"
        tools:layout="@layout/fragment_realtime_graph" />
    <fragment
        android:id="@+id/nav_alert_threshold"
        android:name="com.example.vnagrapher.ui.alert_threshold.AlertThresholdFragment"
        android:label="@string/menu_alert_threshold"
        tools:layout="@layout/fragment_alert_threshold" />
    <fragment
        android:id="@+id/nav_led_alert"
        android:name="com.example.vnagrapher.ui.led_alert.LedAlertFragment"
        android:label="@string/menu_led_alert"
        tools:layout="@layout/fragment_led_alert" />
</navigation>